[gd_scene load_steps=14 format=1]

[ext_resource path="res://expectation.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemies/Standard/idle1.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/Standard/idle2.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/Standard/idle3.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies/Standard/change1.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies/Standard/change2.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies/Standard/change3.png" type="Texture" id=7]
[ext_resource path="res://assets/Enemies/Standard/change4.png" type="Texture" id=8]
[ext_resource path="res://assets/Enemies/Standard/SKREE1.png" type="Texture" id=9]
[ext_resource path="res://assets/Enemies/Standard/SKREE2.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 11.0
height = 34.0002

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "change",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "change2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "SKREE",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 16, 14.7278 )

[node name="expectation" type="Area2D" groups=[
"expectation",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.727273, 0, 0, 1.28571, 1.19209e-07, -20 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, -20 )
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 1.19209e-07, -20 )
transform/scale = Vector2( 0.727273, 1.28571 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 6, 0, 0, 6.28846, 5.72205e-06, -75.3846 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

visibility/visible = false
transform/pos = Vector2( 5.72205e-06, -75.3846 )
transform/scale = Vector2( 6, 6.28846 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="." to="." method="_on_expectation_body_enter"]

[connection signal="body_enter" from="." to="." method="_on_standard_body_enter"]

[connection signal="finished" from="sprite" to="." method="_on_sprite_finished"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]


